# GenMusPianoAccompaniment

./: .gitignore  README.md  pyproject.toml
songify/: __init__.py  app.py  geneticmelodyharmonizer AP.py  geneticmelodyharmonizer GBT.py  geneticmelodyharmonizer_GBT2.py  main.py  melody.py  melody_harmonizer.py  preferred_chord_transitions.py  songify.py  tests.py  utils.py  youtube.py
