[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "songify"
version = "0.1.0"
description = "Generate music piano accompaniment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchaudio",
    "librosa",
    "pesto-pitch",
    "symusic",
    "matplotlib",
    "music21",
    "streamlit",
    "streamlit-advanced-audio",
    "silero_vad",
    "ffmpeg-python",
    "yt-dlp",
]

[tool.setuptools]
packages = ["songify"]